# FibBenchmark

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: RELEASE_TEMPLATE.md
crates/fib-cli/: Cargo.toml  README.md
crates/fib-cli/src/: main.rs
crates/fib-cli/src/commands/: bench.rs  binet_analysis.rs  calc.rs  compare.rs  compare_go.rs  info.rs  memory.rs  mod.rs  report.rs  sequence.rs  simd.rs
crates/fib-cli/tests/: integration_tests.rs
crates/fib-core/: Cargo.toml  README.md
crates/fib-core/benches/: fib_benchmarks.rs
crates/fib-core/src/: allocator.rs  bigint.rs  closed_form.rs  iterative.rs  lib.rs  matrix.rs  memory.rs  recursive.rs  simd.rs
crates/fib-core/tests/: overflow_tests.rs
crates/fib-go/: Cargo.toml  README.md  build.rs
crates/fib-go/go/: fib.go
crates/fib-go/src/: lib.rs
crates/fib-profiler/: Cargo.toml  README.md
crates/fib-profiler/src/: main.rs
crates/fib-viz/: Cargo.toml  README.md
crates/fib-viz/src/: chart_generator.rs  chart_generator_tests.rs  data_parser.rs  lib.rs  main.rs
dashboard/: README.md  index.html
dashboard/css/: styles.css
dashboard/data/: binet_accuracy.json  complexity_comparison.json  golden_ratio_convergence.json
dashboard/js/: app.js  charts.js  theme.js
docs/: ARCHITECTURE.md  BENCHMARKS.md  MANUAL.md  MATHEMATICS.md  PLANNING.md  announcement_rust.md  rust_vs_go.md
docs/math/: binet_formula.md  fibonacci_theory.md  matrix_method.md
docs/performance/: advanced_profiling.md  memory_analysis.md  optimization_techniques.md  simd.md
docs/usage/: getting_started.md
scripts/: count_loc.sh  generate_report.ps1  generate_report.sh  run_all.ps1  run_all.sh  run_benchmarks.ps1  run_benchmarks.sh  setup_go.ps1  setup_go.sh
templates/: report.html  report.js  style.css
