[workspace]
members = [
    "crates/fib-core",
    "crates/fib-cli",
    "crates/fib-profiler",
    "crates/fib-viz",
    "crates/fib-go",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
authors = ["FibBenchmark Team"]
license = "MIT"
repository = "https://github.com/agbru/FibBenchmark"

[workspace.dependencies]
# Core dependencies
clap = { version = "4.4", features = ["derive"] }
criterion = "0.5"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Visualization
plotly = { version = "0.8", features = ["kaleido"] }

# Testing
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true
