[package]
name = "fib-go"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Go FFI bridge for Fibonacci algorithm comparison"
documentation = "https://docs.rs/fib-go"
homepage = "https://github.com/agbru/FibBenchmark"
readme = "../../README.md"
keywords = ["fibonacci", "go", "ffi", "benchmark"]
categories = ["algorithms", "external-ffi-bindings"]
build = "build.rs"

[dependencies]
fib-core = { path = "../fib-core" }

[build-dependencies]
cc = "1.0"
